[package]
name = "s3up"
version = "0.1.1"
edition = "2024"
description = "lil fella putting files into buckets"
license = "MIT"
keywords = ["s3", "s3-client"]
repository = "https://github.com/mxve/s3up"

[dependencies]
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.125"
aws-credential-types = "1.2"
tokio = { version = "1.50", features = ["full"] }
dotenvy = "0.15"
futures = "0.3"
mime_guess = "2.0"